isolated gRPC remote access and two-way authentication module

--- a/src/utils/cpputils/CMakeLists.txt
+++ b/src/utils/cpputils/CMakeLists.txt
@@ -1,6 +1,10 @@
 # get current directory sources files
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_cpputils_srcs)
 
+if (NOT ENABLE_GRPC_REMOTE_ACCESS)
+    list(REMOVE_ITEM local_cpputils_srcs "${CMAKE_CURRENT_SOURCE_DIR}/tls_private_key_encrypt.cc")
+endif()
+
 set(CPPUTILS_SRCS
     ${local_cpputils_srcs}
     PARENT_SCOPE
