Add ut for path
Signed-off-by: zhongtao <taozh97@163.com>

--- a/test/cutils/CMakeLists.txt
+++ b/test/cutils/CMakeLists.txt
@@ -16,6 +16,7 @@ target_include_directories(libutils_ut
 )
 
 add_subdirectory(mainloop)
+add_subdirectory(path)
 add_subdirectory(utils_string)
 add_subdirectory(utils_convert)
 add_subdirectory(utils_array)
