--- a/src/utils/cutils/CMakeLists.txt
+++ b/src/utils/cutils/CMakeLists.txt
@@ -2,7 +2,7 @@
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_cutils_srcs)
 add_subdirectory(map)
 
-if (NOT ANDROID)
+if ((NOT ANDROID) AND (NOT MUSL))
     list(REMOVE_ITEM local_cutils_srcs "${CMAKE_CURRENT_SOURCE_DIR}/utils_pwgr.c")
 endif()
 
