--- a/test/cmd/isula/utils/template_string_parse/CMakeLists.txt
+++ b/test/cmd/isula/utils/template_string_parse/CMakeLists.txt
@@ -19,3 +19,4 @@ target_include_directories(${EXE} PUBLIC
     
 target_link_libraries(${EXE} ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${ISULA_LIBUTILS_LIBRARY} libutils_ut -lcrypto -lyajl -lz)
 add_test(NAME ${EXE} COMMAND ${EXE} --gtest_output=xml:${EXE}-Results.xml)
+set_tests_properties(${EXE} PROPERTIES TIMEOUT 120)
