fix compile error when not enable remote ro
Signed-off-by: Neil.wrz <wangrunze13@huawei.com>

--- a/src/daemon/modules/image/oci/storage/image_store/CMakeLists.txt
+++ b/src/daemon/modules/image/oci/storage/image_store/CMakeLists.txt
@@ -1,5 +1,6 @@
 # get current directory sources files
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_image_store_srcs)
+list(REMOVE_ITEM local_image_store_srcs "${CMAKE_CURRENT_SOURCE_DIR}/image_remote_impl.c")
 
 set(IMAGE_STORE_SRCS
     ${local_image_store_srcs}
