--- a/src/cmd/isula/stream/CMakeLists.txt
+++ b/src/cmd/isula/stream/CMakeLists.txt
@@ -1,7 +1,7 @@
 # get current directory sources files
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_isula_stream_srcs)
 
-# use a separate micro defination for libarchive
+# use a separate micro definition for libarchive
 if (DISABLE_OCI)
     list(REMOVE_ITEM local_isula_stream_srcs
         ${CMAKE_CURRENT_SOURCE_DIR}/cp.c
