Add isula image prune command. More details please refer to the docs.
Address zhongtao and haozi007' comments.

Add image unit test.
Add CI test for image prune

--- a/src/cmd/isula/CMakeLists.txt
+++ b/src/cmd/isula/CMakeLists.txt
@@ -4,6 +4,9 @@ add_subdirectory(information)
 add_subdirectory(extend)
 add_subdirectory(stream)
 add_subdirectory(images)
+if(ENABLE_SYSTEM_PRUNE)
+add_subdirectory(image)
+endif()
 add_subdirectory(volume)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} isula_srcs)
 
@@ -12,6 +15,7 @@ set(local_cmd_isula_srcs
     ${ISULA_BASE_SRCS}
     ${ISULA_EXTEND_SRCS}
     ${ISULA_IMAGES_SRCS}
+    ${ISULA_IMAGE_SRCS}
     ${ISULA_VOLUME_SRCS}
     ${ISULA_INFORMATION_SRCS}
     ${ISULA_STREAM_SRCS}
@@ -22,6 +26,7 @@ set(local_cmd_isula_incs
     ${CMAKE_CURRENT_SOURCE_DIR}/base
     ${CMAKE_CURRENT_SOURCE_DIR}/extend
     ${CMAKE_CURRENT_SOURCE_DIR}/images
+    ${CMAKE_CURRENT_SOURCE_DIR}/image
     ${CMAKE_CURRENT_SOURCE_DIR}/volume
     ${CMAKE_CURRENT_SOURCE_DIR}/information
     ${CMAKE_CURRENT_SOURCE_DIR}/stream
