Add process bar show for pull functions.
Related PR: https://gitee.com/openeuler/lcr/pulls/256
Related design: https://gitee.com/openeuler/iSulad/pulls/2084

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(sha256)
 add_subdirectory(tar)
 add_subdirectory(http)
 add_subdirectory(buffer)
+add_subdirectory(progress)
 
 set(local_utils_srcs
     ${utils_top_srcs}
@@ -15,6 +16,7 @@ set(local_utils_srcs
     ${CUTILS_SRCS}
     ${CONSOLE_SRCS}
     ${BUFFER_SRCS}
+    ${PROGRESS_SRCS}
     )
 
 set(local_utils_incs
@@ -24,6 +26,7 @@ set(local_utils_incs
     ${CUTILS_INCS}
     ${CONSOLE_INCS}
     ${BUFFER_INCS}
+    ${PROGRESS_INCS}
     )
 
 if (GRPC_CONNECTOR)
