--- a/test/cutils/CMakeLists.txt
+++ b/test/cutils/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(utils_utils)
 add_subdirectory(utils_verify)
 add_subdirectory(utils_network)
 add_subdirectory(utils_transform)
+add_subdirectory(map)
