--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,6 +42,7 @@ IF(ENABLE_UT)
     add_subdirectory(image)
     add_subdirectory(cmd)
     add_subdirectory(runtime)
+    add_subdirectory(sandbox)
     add_subdirectory(specs)
     add_subdirectory(services)
     add_subdirectory(network)
