Add sandboxer controller and controller manager
Signed-off-by: xuxuepeng <xuxuepeng1@huawei.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,9 @@ IF(ENABLE_UT)
     add_subdirectory(image)
     add_subdirectory(cmd)
     add_subdirectory(runtime)
-    add_subdirectory(sandbox)
+    if (ENABLE_CRI_API_V1)
+      add_subdirectory(sandbox)
+    endif()
     add_subdirectory(specs)
     add_subdirectory(services)
     add_subdirectory(network)
