--- a/test/sandbox/controller/sandboxer/sandboxer_client/CMakeLists.txt
+++ b/test/sandbox/controller/sandboxer/sandboxer_client/CMakeLists.txt
@@ -1,21 +1,18 @@
 project(iSulad_UT)
 
-SET(EXE sandbox_controller_ut)
-
-aux_source_directory(${CMAKE_BINARY_DIR}/grpc/src/api/services/sandbox/sandbox/types sandbox_type_srcs)
+SET(EXE controller_sandboxer_client_ut)
 
 add_executable(${EXE}
-    ${sandbox_type_srcs}
-    ${CMAKE_BINARY_DIR}/grpc/src/api/services/sandbox/sandbox.pb.cc
-    ${CMAKE_BINARY_DIR}/grpc/src/api/services/cri/v1/api_v1.pb.cc
-    ${CMAKE_BINARY_DIR}/grpc/src/api/services/cri/gogo.pb.cc
+    ${grpc_sandbox_type_srcs}
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/daemon/sandbox/controller/sandboxer/client/grpc_sandboxer_client.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/utils/cpputils/errors.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../test/mocks/controller_stub_mock.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../test/sandbox/controller/controller_common.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/sandboxer_client_ut.cc)
 
 target_include_directories(${EXE} PUBLIC
     ${GTEST_INCLUDE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../test/sandbox/controller
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../test/mocks
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/daemon/entry/cri
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/daemon/sandbox/controller
