use macros to isolate the password option of login and the plugin module
Signed-off-by: zhongtao <zhongtao17@huawei.com>

--- a/src/daemon/modules/api/CMakeLists.txt
+++ b/src/daemon/modules/api/CMakeLists.txt
@@ -9,3 +9,6 @@ set(MODULES_API_INCS
     PARENT_SCOPE
     )
 
+if (NOT ENABLE_PLUGIN)
+    list(REMOVE_ITEM MODULES_API_INCS "${CMAKE_CURRENT_SOURCE_DIR}/plugin_api.h")
+endif()
