--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -101,7 +101,11 @@ add_executable(isula
     ${ISULA_SRCS}
     )
 target_include_directories(isula PUBLIC ${ISULA_INCS} ${SHARED_INCS})
-target_link_libraries(isula libisula_client ${NCURSES_LIBRARY} ${LIBYAJL_LIBRARY})
+target_link_libraries(isula libisula_client ${LIBYAJL_LIBRARY})
+if (GRPC_CONNECTOR)
+    target_link_libraries(isula ${NCURSES_LIBRARY})
+endif()
+
 if (ANDROID OR MUSL)
     target_link_libraries(isula ${LIBSSL_LIBRARY})
 else()
