--- a/CI/dockerfiles/Dockerfile-fedora
+++ b/CI/dockerfiles/Dockerfile-fedora
@@ -94,8 +94,7 @@ RUN dnf update -y && dnf install -y automake \
 			lvm2 \
 			patch \
 			tcpdump \
-			iputils \
-            ncurses-devel
+			iputils 
 
 RUN dnf clean all
 RUN pip3 install meson ninja
@@ -116,7 +115,7 @@ RUN echo "[source.crates-io]" >> ${HOME}/.cargo/config && \
    echo "[source.local-registry]" >> ${HOME}/.cargo/config && \
    echo "directory = \"vendor\"" >> ${HOME}/.cargo/config
 
-RUN dnf install -y lcov && dnf clean all
+RUN dnf install -y lcov ncurses-devel && dnf clean all
 
 # install libevhtp
 RUN export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH && \
