--- a/src/daemon/modules/container/container_gc/CMakeLists.txt
+++ b/src/daemon/modules/container/container_gc/CMakeLists.txt
@@ -3,6 +3,7 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_gc_srcs)
 
 set(GC_SRCS
     ${local_gc_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
 
