--- a/src/daemon/modules/container/restart_manager/CMakeLists.txt
+++ b/src/daemon/modules/container/restart_manager/CMakeLists.txt
@@ -3,6 +3,7 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_restart_manager_srcs)
 
 set(RESTART_MANAGER_SRCS
     ${local_restart_manager_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
 
