--- a/src/daemon/modules/image/oci/registry/CMakeLists.txt
+++ b/src/daemon/modules/image/oci/registry/CMakeLists.txt
@@ -4,5 +4,6 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} image_registry_srcs)
 
 set(IMAGE_SRCS
     ${image_registry_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
