--- a/src/daemon/modules/image/oci/storage/remote_layer_support/CMakeLists.txt
+++ b/src/daemon/modules/image/oci/storage/remote_layer_support/CMakeLists.txt
@@ -3,6 +3,7 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_remote_layer_support_srcs
 
 set(REMOTE_LAYER_SUPPORT_SRCS
     ${local_remote_layer_support_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
 
