--- a/src/daemon/modules/events/CMakeLists.txt
+++ b/src/daemon/modules/events/CMakeLists.txt
@@ -3,6 +3,7 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_events_srcs)
 
 set(EVENTS_SRCS
     ${local_events_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
 
