--- a/src/daemon/modules/image/oci/storage/layer_store/graphdriver/devmapper/CMakeLists.txt
+++ b/src/daemon/modules/image/oci/storage/layer_store/graphdriver/devmapper/CMakeLists.txt
@@ -3,5 +3,6 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} local_devmapper_srcs)
 
 set(DEVMAPPER_SRCS
     ${local_devmapper_srcs}
+    ${CMAKE_SOURCE_DIR}/src/utils/threadpool/thpool.c
     PARENT_SCOPE
     )
