--- a/src/daemon/entry/connect/grpc/CMakeLists.txt
+++ b/src/daemon/entry/connect/grpc/CMakeLists.txt
@@ -10,9 +10,14 @@ endif()
 
 add_subdirectory(cri)
 
+if (ENABLE_NRI)
+    add_subdirectory(nri)
+endif()
+
 set(SERVICE_GRPC_SRCS
     ${local_service_grpc_srcs}
     ${SERVICE_CRI_SRCS}
+    ${SERVICE_NRI_SRCS}
     PARENT_SCOPE
 )
 
@@ -20,5 +25,6 @@ set(SERVICE_GRPC_INCS
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/container
     ${SERVICE_CRI_INCS}
+    ${SERVICE_NRI_INCS}
     PARENT_SCOPE
 )
