--- a/src/daemon/common/CMakeLists.txt
+++ b/src/daemon/common/CMakeLists.txt
@@ -9,16 +9,22 @@ if (GRPC_CONNECTOR)
     add_subdirectory(cri)
 endif()
 
+if (ENABLE_NRI)
+    add_subdirectory(nri)
+endif()
+
 set(local_daemon_common_srcs ${daemon_common_top_srcs})
 
 set(DAEMON_COMMON_SRCS
     ${COMMON_CRI_SRCS}
+    ${COMMON_NRI_SRCS}
     ${local_daemon_common_srcs}
     PARENT_SCOPE
     )
 
 set(DAEMON_COMMON_INCS
     ${COMMON_CRI_INCS}
+    ${COMMON_NRI_INCS}
     ${CMAKE_CURRENT_SOURCE_DIR}
     PARENT_SCOPE
     )
